--- a/public/css/style.css
+++ b/public/css/style.css
@@ -91,8 +91,9 @@ h3 {
 	font-family: 'The Girl Next Door', cursive;
 }
 
-.tree {
-	vertical-align: center;
+.current-chapter p {
+	font-size: 48px;
+	text-align: center;
 }
 
 .left-side {
